tests/contract_testcases/substrate/functions/global_functions.sol

        function() {}
        
// ---- Expect: diagnostics ----
// error: 2:9-19: missing function name
